Fixed overflow hidden on sandbox h1

--- a/src/scss/sandbox.scss
+++ b/src/scss/sandbox.scss
@@ -11,6 +11,7 @@
 h1 {
    overflow: hidden;
    position: relative;
+   padding-bottom: 0.15em;
 
    &:after {
       content: '';
